tests/snapshots/run_wpt_conformance__litert_quantizeLinear_float16_0D_tensor_with_int8_0D_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float16 0D tensor with int8 0D zeroPoint, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: QuantizeLinear { input: 0, scale: 1, zero_point: Some(2), options: Some(MLOperatorOptions { label: "" }), outputs: [3] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f16[];
  }

  consts {
    operand_1: f16[] @bytes([123, 60]);
    operand_2: i8[] @bytes([1]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
