tests/snapshots/run_wpt_conformance__litert_quantizeLinear_float32_1D_constant_tensor_with_uint8_1D_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float32 1D constant tensor with uint8 1D zeroPoint, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[4] @bytes([146, 37, 35, 192, 121, 111, 153, 192, 45, 158, 6, 65, 216, 121, 195, 64]);
    operand_1: f32[4] @bytes([79, 125, 21, 65, 43, 101, 143, 62, 41, 191, 147, 64, 42, 101, 143, 63]);
    operand_2: u8[4] @bytes([128, 128, 128, 128]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(operand_0, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
